--- a/views/content/activity-level.pug
+++ b/views/content/activity-level.pug
@@ -22,10 +22,10 @@ block progress-bar-after
 block input
     .flex.flex-col.justify-center.space-x-3
         .flex.justify-center.space-x-3
-            h1.text-charlotte-blue.text-lg.font-black.tracking-normal(class='md:text-xl xl:text-2xl') How intense is the activity? 
+            h1.text-midnight-blue.text-lg.font-black.tracking-normal(class='md:text-xl xl:text-2xl') How intense is the activity? 
             .dropdown.dropdown-end
                 .btn.btn-circle.btn-ghost.btn-sm.text-info(tabindex='0')
-                    i.fas.fa-info-circle.text-charlotte-blue
+                    i.fas.fa-info-circle.text-midnight-blue
 
                 .shadow.card.compact.dropdown-content.bg-base-100.rounded-box.w-52(tabindex='0')
                     .card-body
