--- a/views/content/home.pug
+++ b/views/content/home.pug
@@ -11,16 +11,16 @@
             | Planuhin ang iyong mga aktibidad alang-alang sa kaligtasan at alamin kung gaano kahalaga ang bawat desisyon upang maging ligtas sa COVID-19.
 
       .flex.flex-col.text-center.text-white.text-xs.font-black.tracking-widest2x.mt-5(class='sm:text-s md:text-base lg:text-lg md:pr-16')
-        a.bg-charlotte-gold.my-2.py-3.rounded-full.shadow-lg(href='#consent_modal' class='md:py-5')
+        a.bg-gold.my-2.py-3.rounded-full.shadow-lg(href='#consent_modal' class='md:py-5')
           span.english-text
             | GET STARTED
-          span.filipino-text 
+          span.filipino-text
             | MAGSIMULA
 
-        a.bg-charlotte-blue.my-2.py-3.rounded-full.shadow-lg(href="/how-to-use" class='md:py-5')
+        a.bg-midnight-blue.my-2.py-3.rounded-full.shadow-lg(href="/how-to-use" class='md:py-5')
           span.english-text
             | HOW TO USE
-          span.filipino-text 
+          span.filipino-text
             | PAANO GAMITIN
 
     img(src="static/images/Home_Illus_Above.svg" class='lg:max-w-3xl xl:max-w-5xl')
@@ -33,94 +33,141 @@ section.info(class='lg:min-h-screen')
         object.h-52.w-52(data="/static/icons/Aspire-Logo (green).svg" type='image/svg+xml')
       h1.text-4xl.font-semibold.text-center.py-7(class='md:text-5xl xl:text-6xl')  Meet aspire.
       span.text-base.px-10(class='md:text-lg xl:text-xl')
-        span.english-text 
+        span.english-text
           | Short for Activity Safety Planning and Infection Risk Estimator, it aims to estimate the possible risks one can have on their planned activities during the global pandemic.
           | It is heavily based on Jimenez and Peng&rsquo;s estimator and the Goldberg et al. &apos;s MyCOVIDRisk App.
-        span.filipino-text 
-          | Ang daglat para sa “Activity Safety Planning and Infection Risk Estimator,” ito ay naglalayong tantiyahin ang 
-          | mga posibleng panganib na maaaring magkaroon ang isang tao sa kanilang nakaplanong aktibidad lalo na sa panahon ng pandaigdigang pandemya. 
-          | Ito ay lubusang nakabatay sa estimator ni Jimenez at Peng. Ang inspirasyon naman ay nakuha mula sa aplikasyon ni Golberg et al. na nangangalang 
+        span.filipino-text
+          | Ang daglat para sa “Activity Safety Planning and Infection Risk Estimator,” ito ay naglalayong tantiyahin ang
+          | mga posibleng panganib na maaaring magkaroon ang isang tao sa kanilang nakaplanong aktibidad lalo na sa panahon ng pandaigdigang pandemya.
+          | Ito ay lubusang nakabatay sa estimator ni Jimenez at Peng. Ang inspirasyon naman ay nakuha mula sa aplikasyon ni Golberg et al. na nangangalang
           | MyCOVIDRisk App.
     .flex.flex-col.text-center.text-white.my-12
       span.text-base.text-green-400.m-10(class='md:text-lg xl:text-xl')  In aspire you can...
       .grid.grid-cols-1.gap-4(class='md:grid-cols-3')
         .text-white.flex.flex-col.p-10.space-y-5
-          .h-28.w-28.mx-auto.p-5.bg-charlotte-blue.rounded-7xl.shadow-lg.flex
+          .h-28.w-28.mx-auto.p-5.bg-midnight-blue.rounded-7xl.shadow-lg.flex
             object.h-16.w-16.self-center.object-center.m-auto(data="/static/icons/Estimate.svg" type='image/svg+xml')
           span.font-semibold.text-xl.tracking-wide(class='md:text-2xl xl:text-3xl')  Estimate
           span.text-base.font-light(class='md:text-lg xl:text-xl')
             span.english-text
               | Utilize premade values that are based on research to identify your COVID-19 risk when doing a planned activity.
-            span.filipino-text 
+            span.filipino-text
               | Gamitin ang mga <i>premade</i> na halaga na nakabatay sa pananaliksik upang matukoy ang iyong panganib sa COVID-19 kapag ginagawa ang naplanuhang aktibidad.
         .text-white.flex.flex-col.p-10.space-y-5
-          .h-28.w-28.mx-auto.p-5.bg-charlotte-blue.rounded-7xl.shadow-lg
+          .h-28.w-28.mx-auto.p-5.bg-midnight-blue.rounded-7xl.shadow-lg
             object.h-16.w-16.self-center.object-center.m-auto(data="/static/icons/Learn.svg" type='image/svg+xml')
           span.font-semibold.text-xl.tracking-wide(class='md:text-2xl xl:text-3xl')  Learn
           span.text-base.font-light(class='md:text-lg xl:text-xl')
             span.english-text
               | Experiment with values on-site to determine how your risk can increase or decrease based on the different circumstances given by the website.
-            span.filipino-text 
+            span.filipino-text
               | Mag-eksperimento gamit ang mga bigay na halaga upang matukoy kung paano maaaring tumaas o bumaba ang iyong panganib sa COVID-19 batay sa iba't ibang aktibidad na ibinigay ng website.
         .text-white.flex.flex-col.p-10.space-y-5
-          .h-28.w-28.mx-auto.p-5.bg-charlotte-blue.rounded-7xl.shadow-lg
+          .h-28.w-28.mx-auto.p-5.bg-midnight-blue.rounded-7xl.shadow-lg
             object.h-16.w-16.self-center.object-center.m-auto(data="/static/icons/Evaluate.svg" type='image/svg+xml')
           span.font-semibold.text-xl.tracking-wide(class='md:text-2xl xl:text-3xl')  Evaluate
           span.text-base.font-light(class='md:text-lg xl:text-xl')
             span.english-text
               | With this estimator, it can help you assess whether your planned activity is safe for you and your family. If not, it allows you to plan ahead of time for possible solutions regarding possible concerns.
             span.filipino-text
-              | Makakatulong ang <i>estimator</i> upang masuri mo kung ang iyong 
-              | nakaplanong aktibidad ay ligtas para sa iyo at sa iyong pamilya. Kung 
-              | hindi, binibigyan ka nito ng pagkakataon upang planuhin nang maaga ang mga posibleng 
+              | Makakatulong ang <i>estimator</i> upang masuri mo kung ang iyong
+              | nakaplanong aktibidad ay ligtas para sa iyo at sa iyong pamilya. Kung
+              | hindi, binibigyan ka nito ng pagkakataon upang planuhin nang maaga ang mga posibleng
               | solusyon tungkol sa mga posibleng alalahanin na isinaad ng <i>website.</i>
 
   .info-bottom-circle
-footer.container.mx-auto(class='md:py-10')
-  .grid.grid-cols-1.gap-4(class='md:grid-cols-2')
-    .p-7.space-y-5
-      h1.text-4xl.font-semibold(class='md:text-5xl xl:text-6xl')  
-        span.english-text Contact us!
-        span.filipino-text Makipag-ugnayan sa amin!
-      span.text-base(class='md:text-lg xl:text-xl md:block')
-        span.english-text
-          | Questions not answered yet? Concerns unaddressed? Feel free to contact any of the researchers below.
-        span.filipino-text 
-          | Mga tanong na hindi pa nasasagot? Mga alalahanin na hindi natutugunan? Huwag mag-atubiling makipag-ugnayan sa alinman sa mga mananaliksik sa ibaba.
-    .container.p-5.content-center.justify-center
-      .bg-blue-stained-white.rounded-full.p-10
-        h1.text-center.font-semibold.text-xl.tracking-wide(class='md:text-2xl xl:text-3xl')  The AGALEPA team
-        .px-10.py-5
-          span.text-sm(class='md:text-base xl:text-lg')
-            span.english-text 
-              | We are the student researchers from the Senior High School Department of De La Salle University-Integrated School Laguna Campus. We created this website to assist people all over the Philippines to estimate their risks before going outside, especially since the COVID-19 disease is still prevalent in this country. This research study is for the partial fulfillment of the requirements for our research project.
-            span.filipino-text 
-              | Kami ang mga mananaliksik na nagmumula sa Departamento ng Senior High School ng De La Salle University—Integrated School Laguna Campus. Ginawa namin ang website na ito upang tulungan ang mga tao sa Pilipinas na matantya ang kanilang mga panganib para sa kanilang aktibidad, lalo na't ang sakit na COVID-19 ay laganap pa rin sa bansang ito. Ang pananaliksik ay para sa bahagyang katuparan ng mga kinakailangan para sa aming kurso ukol sa pananaliksik.
-  .grid.grid-cols-1.gap-5.py-10.text-center(class='md:grid-cols-2 lg:grid-cols-4')
-    .space-y-2
-      h2.font-semibold.text-xl.tracking-wide(class='md:text-2xl xl:text-3xl')  Mr. Maveron Aguares
-      h3.font-semibold.text-base.tracking-wide(class='md:text-lg xl:text-xl')  Programmer
-      h4.text-base(class='md:text-lg xl:text-xl')
-        a(class='hover:underline')
-          | maveron_aguares@dlsu.edu.ph
-    .space-y-2
-      h2.font-semibold.text-xl.tracking-wide(class='md:text-2xl xl:text-3xl')  Ms. Anne Gabor
-      h3.font-semibold.text-base.tracking-wide(class='md:text-lg xl:text-xl')  Communications manager
-      h4.text-base(class='md:text-lg xl:text-xl')
-        a(class='hover:underline')
-          | anne_nicole_gabor@dlsu.edu.ph
-    .space-y-2
-      h2.font-semibold.text-xl.tracking-wide(class='md:text-2xl xl:text-3xl')  Mr. Thaniel Lee
-      h3.font-semibold.text-base.tracking-wide(class='md:text-lg xl:text-xl')  Programmer
-      h4.text-base(class='md:text-lg xl:text-xl')
-        a(class='hover:underline')
-          | thaniel_lee@dlsu.edu.ph
-    .space-y-2
-      h2.font-semibold.text-xl.tracking-wide(class='md:text-2xl xl:text-3xl')  Mr. Cy Padillon
-      h3.font-semibold.text-base.tracking-wide(class='md:text-lg xl:text-xl')  Graphic Designer
-      h4.text-base(class='md:text-lg xl:text-xl')
-        a(class='hover:underline')
-          | cy_padillon@dlsu.edu.ph
+//-
+    section.mx-auto.flex.align-items-center.justify-center(class='md:py-10')
+        .container.space-y-10
+            .section.text-center
+                h1.text-3xl.font-semibold.text-center.py-7(class='md:text-4xl xl:text-5xl')  Frequently Asked Questions
+            .section.space-y-4
+                .collapse.border.border-base-300.bg-base-100.rounded-box.collapse-plus.mx-auto(tabindex='0')
+                    .collapse-title.font-semibold.text-xl.tracking-wide(class='md:text-2xl xl:text-3xl')
+                        span.english-text
+                            | Lorem ipsum dolor sit amet
+                    .collapse-content
+                        span.text-base.font-bold(class='md:text-lg xl:text-xl')
+                            span.english-text
+                                |  consectetur adipiscing elit.
+                .collapse.border.border-base-300.bg-base-100.rounded-box.collapse-plus.mx-auto(tabindex='0')
+                    .collapse-title.font-semibold.text-xl.tracking-wide(class='md:text-2xl xl:text-3xl')
+                        span.english-text
+                            | Lorem ipsum dolor sit amet
+                    .collapse-content
+                        span.text-base.font-bold(class='md:text-lg xl:text-xl')
+                            span.english-text
+                                |  consectetur adipiscing elit.
+                .collapse.border.border-base-300.bg-base-100.rounded-box.collapse-plus.mx-auto(tabindex='0')
+                    .collapse-title.font-semibold.text-xl.tracking-wide(class='md:text-2xl xl:text-3xl')
+                        span.english-text
+                            | Lorem ipsum dolor sit amet
+                    .collapse-content
+                        span.text-base.font-bold(class='md:text-lg xl:text-xl')
+                            span.english-text
+                                |  consectetur adipiscing elit.
+                .collapse.border.border-base-300.bg-base-100.rounded-box.collapse-plus.mx-auto(tabindex='0')
+                    .collapse-title.font-semibold.text-xl.tracking-wide(class='md:text-2xl xl:text-3xl')
+                        span.english-text
+                            | Lorem ipsum dolor sit amet
+                    .collapse-content
+                        span.text-base.font-bold(class='md:text-lg xl:text-xl')
+                            span.english-text
+                                |  consectetur adipiscing elit.
+
+//-
+    .contact-top-circle
+
+section.bg-sky-blue.mx-auto.flex.align-items-center.justify-center(class='md:py-10')
+    .container.space-y-10
+        //-
+            .section.text-center
+                h1.text-3xl.font-semibold.text-center.py-7(class='md:text-4xl xl:text-5xl')  Still have questions?
+                span.text-base.px-10(class='md:text-lg xl:text-xl')
+                    span.english-text
+                        | If you can not find an answer to your questions in our FAQs, you can always contact us!
+                        span.filipino-text
+                            | Kung hindi niyo mahanap ang sagot sa mga inyon tanong sa aming FAQs, maari kayong makipag ugnayan sa amin!
+
+        .section.text-center
+            h1.text-2xl.font-semibold.text-center.py-7(class='md:text-3xl xl:text-4xl')  The AGALEPA Team
+            span.text-base.px-10(class='md:text-lg xl:text-xl')
+            span.english-text
+                | We are student researchers from the Senior High School Department of De La Salle University-Integrated School Laguna Campus.
+                | This research study is for the partial fulfillment of the requirements for our research project.
+
+            span.filipino-text
+                | We are student researchers from the Senior High School Department of De La Salle University-Integrated School Laguna Campus.
+                | This research study is for the partial fulfillment of the requirements for our research project.
+
+        .grid.grid-cols-1.gap-5.py-10.text-center(class='md:grid-cols-2 lg:grid-cols-4')
+
+            .space-y-2
+                h2.font-semibold.text-xl.tracking-wide(class='md:text-2xl xl:text-3xl')  Ms. Anne Gabor
+                h3.font-semibold.text-base.tracking-wide(class='md:text-lg xl:text-xl')  Communications manager
+                h4.text-base(class='md:text-lg xl:text-xl')
+                    a(class='hover:underline')
+                        | anne_nicole_gabor@dlsu.edu.ph
+            .space-y-2
+                h2.font-semibold.text-xl.tracking-wide(class='md:text-2xl xl:text-3xl')  Mr. Cy Padillon
+                h3.font-semibold.text-base.tracking-wide(class='md:text-lg xl:text-xl')  Graphic Designer
+                h4.text-base(class='md:text-lg xl:text-xl')
+                    a(class='hover:underline')
+                        | cy_padillon@dlsu.edu.ph
+            .space-y-2
+                h2.font-semibold.text-xl.tracking-wide(class='md:text-2xl xl:text-3xl')  Mr. Thaniel Lee
+                h3.font-semibold.text-base.tracking-wide(class='md:text-lg xl:text-xl')  Programmer
+                h4.text-base(class='md:text-lg xl:text-xl')
+                    a(class='hover:underline')
+                        | thaniel_lee@dlsu.edu.ph
+            .space-y-2
+                h2.font-semibold.text-xl.tracking-wide(class='md:text-2xl xl:text-3xl')  Mr. Maveron Aguares
+                h3.font-semibold.text-base.tracking-wide(class='md:text-lg xl:text-xl')  Programmer
+                h4.text-base(class='md:text-lg xl:text-xl')
+                    a(class='hover:underline')
+                        | maveron_aguares@dlsu.edu.ph
+
+
 #consent_modal.modal
   .modal-box.space-y-5.h-96.overflow-auto(class='sm:h-auto')
     .p-6.card.bordered
@@ -129,22 +176,22 @@ footer.container.mx-auto(class='md:py-10')
           span.label-text.w-80
             span.english-text
               | I understand that the website is not a replacement for any medical advice, device, or help.
-            span.filipino-text 
+            span.filipino-text
               | Naiintindihan ko na ang website na ito ay hindi pamalit sa anumang payo, kagamitan, o tulong na pang medikal.
           input.checkbox(type='checkbox' name='chk[]')
     .p-6.card.bordered
       .form-control
         label.cursor-pointer.label
           span.label-text.w-80
-            span.english-text 
+            span.english-text
               | I understand that this website&rsquo;s purpose is for estimating the possible risk of my planned activity, and does not guarantee my safety.
-            span.filipino-text 
+            span.filipino-text
               | Naiintindihan ko na ang layunin ng website na ito ay para sa pagtatantya ng posibleng panganib ng aking nakaplanong aktibidad, at hindi ginagarantiyahan ang aking kaligtasan sa COVID-19.
           input.checkbox(type='checkbox' name='chk[]')
     .p-6.card.bordered
       .form-control
         label.cursor-pointer.label
-          span.label-text.w-80 
+          span.label-text.w-80
             span.english-text
               | I am 18 years old and older.
             span.filipino-text
@@ -153,19 +200,19 @@ footer.container.mx-auto(class='md:py-10')
     .p-6.card.bordered
       .form-control
         label.cursor-pointer.label
-          span.label-text.w-80 
-            span.english-text 
+          span.label-text.w-80
+            span.english-text
               | My planned activity is located in the Philippines.
-            span.filipino-text 
+            span.filipino-text
               | Ang aking nakaplanong aktibidad ay matatagpuan sa loob ng Pilipinas.
           input.checkbox(type='checkbox' name='chk[]')
     .p-6.card.bordered
       .form-control
         label.cursor-pointer.label
-          span.label-text.w-80 
-            span.english-text 
+          span.label-text.w-80
+            span.english-text
               | I do not exhibit symptoms of COVID-19.
-            span.filipino-text 
+            span.filipino-text
               | Wala akong anumang sintomas ng COVID-19.
           input.checkbox(type='checkbox' name='chk[]')
     .card.shadow
@@ -175,9 +222,9 @@ footer.container.mx-auto(class='md:py-10')
         p.filipino-text
           | Tandaan na ang <i>estimator</i> ay ipinapalagay na ang lipunan ay hindi nagpapatupad ng <i>social distancing</i> at pagbabakuna.
     .modal-action
-      a.btn(href='#') 
+      a.btn(href='#')
         span.english-text Close
         span.filipino-text Isara
-      a#consent_btn.btn.bg-charlotte-green.outline-0(href="/estimate/1" disabled='disabled')  
+      a#consent_btn.btn.bg-green.outline-0(href="/estimate/1" disabled='disabled')
         span.english-text Accept
         span.filipino-text Tanggapin
