--- a/views/content/result.pug
+++ b/views/content/result.pug
@@ -25,7 +25,7 @@ block result
             img.h-16(src='/static/images/results/Disclaimer.png')
             span.text-gray-400.self-center.text-left
                 | This is only an estimation and should not replace advice from medical professionals.
-    section.px-8.py-3.flex.flex-col.text-charlotte-blue.text-center(class='sm:px-20 lg:px-96 xl:py-10')
+    section.px-8.py-3.flex.flex-col.text-midnight-blue.text-center(class='sm:px-20 lg:px-96 xl:py-10')
         h3.font-bold.text-xl  Want to test other values? 
         span.flex.flex-col.space-y-5.justify-center.items-center
             a.shadow-sm.rounded-full.bg-dirty-white.py-1.text-lg.font-medium.w-52(href="/estimate/5" type='button')  Go back to summary 
@@ -34,9 +34,9 @@ block result
         span Thank you very much for using aspire! Please support the researchers by answering a short survery to help improve the website!
         section.flex.flex-col.text-lg.text-white.text-center.space-y-4
             span
-                a.rounded-full.bg-charlotte-blue.py-2.w-full.text-lg.font-medium(type='button') Learn how aspire works 
+                a.rounded-full.bg-midnight-blue.py-2.w-full.text-lg.font-medium(type='button') Learn how aspire works 
             span
-                a.rounded-full.bg-charlotte-green.py-2.w-full.text-lg.font-medium(href='https://forms.gle/mknhWeSdLcBHNc1m7' type='button')  Answer Survey 
+                a.rounded-full.bg-green.py-2.w-full.text-lg.font-medium(href='https://forms.gle/mknhWeSdLcBHNc1m7' type='button')  Answer Survey 
 
 block pagination
     |
