--- a/views/content/time-and-people.pug
+++ b/views/content/time-and-people.pug
@@ -19,12 +19,12 @@ block input
             .flex.flex-col.text-center
                 h1.text-black.text-lg.font-semibold.tracking-wide(class='md:text-xl xl:text-2xl')  How long will it take? 
             .grid.grid-cols-1.gap-2
-                .bg-dirty-white.px-3.py-2.text-charlotte-blue.rounded-full.flex.col-span-1.text-xl.py-4
+                .bg-dirty-white.px-3.py-2.text-midnight-blue.rounded-full.flex.col-span-1.text-xl.py-4
                     object.h-6.w-6(data="/static/icons/Duration.svg" type='image/svg+xml')
-                    input#time_input.bg-transparent.ml-3.w-full.text-charlotte-blue.leading-tight(class='focus:outline-none focus:shadow-outline' type='number' placeholder='Input here')
-                .text-charlotte-blue.col-span-1
+                    input#time_input.bg-transparent.ml-3.w-full.text-midnight-blue.leading-tight(class='focus:outline-none focus:shadow-outline' type='number' placeholder='Input here')
+                .text-midnight-blue.col-span-1
                     .grid.grid-cols-2.bg-gray-600.rounded-full.p-1
-                        button#hrsBtn.active.bg-dirty-white.rounded-full.py-4.text-charlotte-blue.cursor-pointer(value='hours' type='button')
+                        button#hrsBtn.active.bg-dirty-white.rounded-full.py-4.text-midnight-blue.cursor-pointer(value='hours' type='button')
                             | Hours
                         button#minBtn.inactive.bg-transparent.rounded-full.py-4.text-gray-400.cursor-pointer(value='minutes' type='button')
                             | Minutes
@@ -32,7 +32,7 @@ block input
             .flex.flex-col.text-center
                 h1.text-black.text-lg.font-semibold.tracking-wide(class='md:text-xl xl:text-2xl') How many people are involved? 
             .grid.grid-cols-1.gap-2
-                .bg-dirty-white.px-3.py-2.text-charlotte-blue.rounded-full.flex.col-span-1.text-xl.py-4
+                .bg-dirty-white.px-3.py-2.text-midnight-blue.rounded-full.flex.col-span-1.text-xl.py-4
                     object.h-6.w-6(data="/static/icons/People.svg" type='image/svg+xml')
-                    input#people_input.bg-transparent.ml-3.w-full.text-charlotte-blue.leading-tight(class='focus:outline-none focus:shadow-outline' type='number' placeholder='Input here')
+                    input#people_input.bg-transparent.ml-3.w-full.text-midnight-blue.leading-tight(class='focus:outline-none focus:shadow-outline' type='number' placeholder='Input here')
 
