--- a/views/estimation.pug
+++ b/views/estimation.pug
@@ -1,5 +1,5 @@
 // site content
-main.px-8.font-sans.text-charlotte-blue.pb-5(class='sm:px-20 lg:px-72')
+main.px-8.font-sans.text-midnight-blue.pb-5(class='sm:px-20 lg:px-72')
   section.space-y-3
     .grid.grid-cols-5.gap-3
       .col-span-4
@@ -24,6 +24,6 @@ main.px-8.font-sans.text-charlotte-blue.pb-5(class='sm:px-20 lg:px-72')
       a.link-btn.text-xl.text-gray-500.w-72.bg-gray-600.rounded-full.text-center.py-4.cursor-not-allowed(href="/" id="estimate-next" disabled)
         | Next
 
-      a.link-btn.text-xl.text-charlotte-blue.w-72.bg-dirty-white.rounded-full.text-center.py-4(href="/" id="estimate-previous")
+      a.link-btn.text-xl.text-midnight-blue.w-72.bg-dirty-white.rounded-full.text-center.py-4(href="/" id="estimate-previous")
         | Back
 block result
