--- a/views/content/activity-location.pug
+++ b/views/content/activity-location.pug
@@ -16,7 +16,7 @@ block progress-bar
 block input
     .flex.flex-col.text-center.space-y-7
         .flex.justify-center.space-x-3
-            h1.text-charlotte-blue.text-lg.font-black.tracking-normal(class='md:text-xl xl:text-2xl')  Where will the activity be? 
+            h1.text-midnight-blue.text-lg.font-black.tracking-normal(class='md:text-xl xl:text-2xl')  Where will the activity be? 
 
         .relative.h-96.flex.justify-center(class='md:h-136')
             img.absolute.h-full.mx-auto(src="/static/images/philippines/PH_All.png")
@@ -25,7 +25,7 @@ block input
         .relative.text-left.flex-grow
             .flex.justify-center.items-center
                 .dropdown.dropdown-top.dropdown-end.capitalize
-                    button#regionBtn.btn-lg.bg-charlotte-gold.w-72.capitalize.text-xl.text-white.rounded-full.outline-none.flex.justify-between.items-center.px-10.cursor-pointer(tabindex='0' class='md:w-96')
+                    button#regionBtn.btn-lg.bg-gold.w-72.capitalize.text-xl.text-white.rounded-full.outline-none.flex.justify-between.items-center.px-10.cursor-pointer(tabindex='0' class='md:w-96')
                         span Select Your Region
                         i.fas.fa-chevron-down
 
