--- a/views/content/how-to-use.pug
+++ b/views/content/how-to-use.pug
@@ -9,7 +9,7 @@
 // turn into carousel
 // image border
 // add mobile view for how to use
-.flex.flex-col.justify-center.items-center.px-20.font-sans.text-charlotte-blue.pb-5.space-y-10(class='md:px-72 lg:px-96')
+.flex.flex-col.justify-center.items-center.px-20.font-sans.text-midnight-blue.pb-5.space-y-10(class='md:px-72 lg:px-96')
   .card.card-bordered.shadow
     figure.px-10.pt-10
       img.rounded-xl(src="/static/images/screenshots/homepage (screenshot 1).png")
@@ -44,7 +44,7 @@
         .flex-1.flex-col.space-y-5
           button#extraDivBtn.m-1.btn  What if my planned activity is not within the available choices?
           #extraDiv.transition-all.h-0.closed.space-y-5
-            .card.shadow.h-0.text-charlotte-blue.bg-white
+            .card.shadow.h-0.text-midnight-blue.bg-white
               .card-body
                 h2.card-title.flex
                   svg.w-6.h-6.mx-2(xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='#2196f3')
@@ -54,25 +54,25 @@
               figure.px-10.pt-10
                 img.rounded-xl(src="/static/images/screenshots/activity level (screenshot 5.1).png")
               .card-body
-                h2.card-title.text-charlotte-blue
+                h2.card-title.text-midnight-blue
                   | Step 2.1 is the activity level. Drag the slider to choose the intensity of your custom activity.
             .card.card-bordered.shadow.font-sans.bg-white.h-0
               figure.px-10.pt-10
                 img.rounded-xl(src="/static/images/screenshots/activity level (screenshot 5.2).png")
               .card-body
-                h2.card-title.text-charlotte-blue
+                h2.card-title.text-midnight-blue
                   | You can go to the advanced settings if you want more specific information to be included.
             .card.card-bordered.shadow.font-sans.bg-white.h-0
               figure.px-10.pt-10
                 img.rounded-xl(src="/static/images/screenshots/ventilation (screenshot 6).png")
               .card-body
-                h2.card-title.text-charlotte-blue
+                h2.card-title.text-midnight-blue
                   | Step 2.2 is the room ventilation. Choose the nearest or similar setting for your activity.
             .card.card-bordered.shadow.font-sans.bg-white.h-0
               figure.px-10.pt-10
                 img.rounded-xl(src="/static/images/screenshots/room size (screenshot 7).png")
               .card-body
-                h2.card-title.text-charlotte-blue
+                h2.card-title.text-midnight-blue
                   | Step 2.3 is the room size. Enter the appropriate values in the input field.
   .card.card-bordered.shadow
     figure.px-10.pt-10
@@ -104,7 +104,7 @@
     .card-body
       h2.card-title
         | You can go back and test new answers.
-  .card.shadow.text-charlotte-blue.bg-white
+  .card.shadow.text-midnight-blue.bg-white
     .card-body
       h2.card-title.flex
         svg.w-6.h-6.mx-2(xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='#2196f3')
