--- a/views/estimation-mixins.pug
+++ b/views/estimation-mixins.pug
@@ -2,7 +2,7 @@ mixin bars(length, max)
     - var index = 0
     while index < max
         if length > 0
-            .bg-charlotte-blue.h-1
+            .bg-midnight-blue.h-1
             - length--
         else
             .bg-cool-gray-400.h-1
