--- a/views/navigation.pug
+++ b/views/navigation.pug
@@ -1,9 +1,9 @@
-header(class="px-8 sm:px-20 lg:px-72 font-sans text-charlotte-blue bg-transparent")
+header(class="px-8 sm:px-20 lg:px-72 font-sans text-midnight-blue bg-transparent")
 
     div(class="navbar my-2 space-y-6 px-0")
          div(class="flex-1 mx-2")
              span(class="font-bold flex items-center space-x-1")
-                 a(href="/"  class="tracking-tighter text-3xl font-black text-charlotte-blue flex")
+                 a(href="/"  class="tracking-tighter text-3xl font-black text-midnight-blue flex")
                      object(class="h-8 w-8" data="/static/icons/Aspire-Logo (sm-blue).svg" type="image/svg+xml")
                      | aspire
 
